# remarkable-update-image

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test.py  wheel_name.py
.github/workflows/: build.yml
remarkable_update_image/: __init__.py  _compat.py  cpio.py  image.py
