[project]
name = "remarkable_update_image"
version = "1.3.3"
authors = [
  { name="Eeems", email="eeems@eeems.email" },
]
description = "Read reMarkable update images"
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files=["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dynamic = ["readme"]
dependencies = [
  "cachetools==7.1.1",
  "cryptography==48",
  "ext4==1.4",
  "indexed-gzip==1.10.3",
  "libconf==2.0.1",
  "protobuf==7.34.1",
  "typing-extensions==4.15.0; python_version<\"3.12\"",
]
[project.optional-dependencies]
test = []
dev = [
  "protobuf-protoc-bin==34.1"
]

[project.urls]
Homepage = "https://github.com/Eeems/remarkable-update-image"
Repository = "https://github.com/Eeems/remarkable-update-image.git"
Issues = "https://github.com/Eeems/remarkable-update-image/issues"

[tool.setuptools]
packages = ["remarkable_update_image"]

[tool.setuptools.package-data]
remarkable_update_image = ['update_metadata.proto']

[tool.setuptools.dynamic]
readme = {file= ["README.md"], content-type = "text/markdown"}

[build-system]
requires = ["setuptools >= 77.0.3", "nuitka>=4.0.6"]
build-backend = "nuitka.distutils.Build"

[tool.ruff]
exclude = [".venv", "build", "remarkable_update_image/update_metadata_pb2.py"]

[tool.ruff.lint]
extend-select = [
    "UP",
    "PL",
    "ANN",
    "S",
]
ignore = [
    "PLW0603",
    "PLR2004",
    "PLR0915",
    "PLR0912",
    "PLR0911",
    "PLR6301",
    "PLR0913",
    "S101",
    "S404",
    "S603",
    "S607",
    "S324",
    "ANN401",
    "ANN001",
    "ANN003",
]

[tool.pyright]
exclude = [".venv", "build", "remarkable_update_image/update_metadata_pb2.py"]
reportMissingTypeStubs = false
reportImportCycles = false

[tool.emake]
test = ["python -u test.py"]
